# vine

./: .gitmodules  CMakeLists.txt  README.md
VineBackend/: CMakeLists.txt
VineBackend/cmake/: source_group.cmake
VineBackend/include/vine/core/: Application.h  Base.h  EntryPoint.h  Logger.h
VineBackend/include/vine/core/codes/: KeyCodes.h  MouseCodes.h
VineBackend/include/vine/events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
VineBackend/include/vine/renderer/: GraphicsContext.h  OrthographicCamera.h  Renderer.h
VineBackend/include/vine/renderer/backend/: Buffer.h  Font.h  MSDFData.h  Shader.h  ShaderCache.h  Texture.h  VertexArray.h
VineBackend/include/vine/renderer/renderable/: Quad.h  Renderable.h  RenderableManager.h  Sprite.h  SpriteImmediate.h  SpriteSheet.h  Text.h
VineBackend/include/vine/resource/: Resource.h  ResourceFont.h  ResourceImage.h  ResourceManager.h  ResourceSprite.h  ResourceSpriteSheet.h
VineBackend/include/vine/script/: Script.h  ScriptManager.h
VineBackend/include/vine/util/: Singleton.h
VineBackend/include/vine/window/: Window.h
VineBackend/src/core/: Application.cpp  Logger.cpp
VineBackend/src/events/: Event.cpp
VineBackend/src/renderer/: GraphicsContext.cpp  OrthographicCamera.cpp  Renderer.cpp
VineBackend/src/renderer/backend/: Buffer.cpp  Font.cpp  Shader.cpp  ShaderCache.cpp  Texture.cpp  VertexArray.cpp
VineBackend/src/renderer/renderable/: Quad.cpp  Renderable.cpp  RenderableManager.cpp  Sprite.cpp  SpriteImmediate.cpp  SpriteSheet.cpp  Text.cpp
VineBackend/src/resource/: Resource.cpp  ResourceFont.cpp  ResourceImage.cpp  ResourceManager.cpp  ResourceSprite.cpp  ResourceSpriteSheet.cpp
VineBackend/src/script/: ScriptManager.cpp
VineBackend/src/window/: Window.cpp
VineMain/: CMakeLists.txt
VineMain/assets/shaders/: flat_color.fs  text.fs  text.vs  texture.fs  texture.vs
VineMain/assets/spritesheets/demo/: sheet.xml
VineMain/src/: main.cpp
